crates/ddlog-syntax/tests/validation/fail/too_many_function_arg_commas.rast
ROOT@0..64
  COMMENT@0..26 "// kind:item validate ..."
  WHITESPACE@26..27 "\n"
  ITEM@27..64
    FUNCTION_DEF@27..64
      ATTRIBUTES@27..27
      MODIFIERS@27..27
      FUNCTION@27..35 "function"
      WHITESPACE@35..36 " "
      FUNCTION_NAME@36..39
        IDENT@36..39 "foo"
      FUNCTION_ARGS@39..60
        L_PAREN@39..40 "("
        FUNCTION_ARG@40..50
          ATTRIBUTES@40..40
          VAR_REF@40..43
            IDENT@40..43 "foo"
          COLON@43..44 ":"
          WHITESPACE@44..45 " "
          TYPE@45..48
            GENERIC_TYPE@45..48
              IDENT@45..48 "Bar"
          COMMA@48..49 ","
          COMMA@49..50 ","
        WHITESPACE@50..51 " "
        FUNCTION_ARG@51..59
          ATTRIBUTES@51..51
          VAR_REF@51..54
            IDENT@51..54 "bar"
          COLON@54..55 ":"
          WHITESPACE@55..56 " "
          TYPE@56..59
            GENERIC_TYPE@56..59
              IDENT@56..59 "Baz"
        R_PAREN@59..60 ")"
      WHITESPACE@60..61 " "
      BLOCK@61..63
        L_CURLY@61..62 "{"
        R_CURLY@62..63 "}"
      WHITESPACE@63..64 "\n"
--
Error: too many commas between function arguments
   ,-[validation/fail/too_many_function_arg_commas.dl:2:23]
   |
 2 | function foo(foo: Bar,, bar: Baz) {}
   :                       |  
   :                       `-- remove this comma
---'
--
// kind:item validate:true
function foo(foo: Bar,, bar: Baz) {}

